src/snapshots/meshb__mail_parser__tests__mail_final_parser_should_work.snap
---
source: src/mail_parser.rs
expression: "mail_parser(\"COOR_3D  \\n\\nN1 2  3.0 4\\nFINSF\\nCOOR_3D  \\nN2 2  3.0 4\\nN3 3  4 4\\nFINSF\")"
---
Ok(
    MailParseOutput {
        nodes: [
            NodeProp {
                name: "N1",
                x: 2.0,
                y: 3.0,
                z: 4.0,
            },
            NodeProp {
                name: "N2",
                x: 2.0,
                y: 3.0,
                z: 4.0,
            },
            NodeProp {
                name: "N3",
                x: 3.0,
                y: 4.0,
                z: 4.0,
            },
        ],
        cells: [],
        groups: [],
    },
)
