src/snapshots/meshb__mail_parser__tests__node_3d_section_parser_should_work.snap
---
source: src/mail_parser.rs
expression: "node_3d_section(\"COOR_3D  \\n\\nN1 2  3.0 4\\nFINSF\\n\")"
---
Ok(
    (
        "",
        NodeElts(
            [
                Node {
                    name: "N1",
                    x: 2.0,
                    y: 3.0,
                    z: 4.0,
                },
            ],
        ),
    ),
)
