src/snapshots/meshb__mail_parser__tests__node_description_parser_should_work-3.snap
---
source: src/mail_parser.rs
expression: "node_description(\"N12 1.2  23.3 233\\n\")"
---
Ok(
    (
        "",
        Node {
            name: "N12",
            x: 1.2,
            y: 23.3,
            z: 233.0,
        },
    ),
)
