src/snapshots/meshb__mail_parser__tests__node_name_parser_should_work-3.snap
---
source: src/mail_parser.rs
expression: "node_name(\"N12\")"
---
Ok(
    (
        "",
        "N12",
    ),
)
