src/snapshots/meshb__mail_parser__tests__node_name_parser_should_work.snap
---
source: src/mail_parser.rs
expression: "node_name(\"23\")"
---
Err(
    Error(
        Base {
            location: "23",
            kind: Expected(
                Alpha,
            ),
        },
    ),
)
