src/snapshots/meshb__mail_parser__tests__poi1_section_parser_should_work.snap
---
source: src/mail_parser.rs
expression: "poi1_section(\"POI1  \\n\\nM1 N2   \\nFINSF\\n\")"
---
Ok(
    (
        "",
        Cells(
            [
                CellProp {
                    cell_type: POI1,
                    name: "M1",
                    nodes: [
                        "N2",
                    ],
                },
            ],
        ),
    ),
)
