src/snapshots/meshb__mail_parser__tests__start_gma_section_should_work-2.snap
---
source: src/mail_parser.rs
expression: "start_gma_section(\"GROUPMA\")"
---
Err(
    Error(
        Base {
            location: "GROUPMA",
            kind: Expected(
                Tag(
                    "GROUP_MA",
                ),
            ),
        },
    ),
)
